[package]
name = "nwl-compiler"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
nwl-shared = { path = "../shared" }

[lib]
path = "src/lib.rs"
